# Autonomous-Deep-Research-Agent

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  Role You are a Senior AI Engineer s.txt  app.py  graph.py  main.py  nodes.py  pyproject.toml  requirements.txt  state.py
.streamlit/: config.toml
api/: __init__.py  main.py
data/: .gitkeep
reports/: .gitkeep
src/: __init__.py  config.py  graph.py  state.py
src/agents/: __init__.py  base.py  critic.py  planner.py  researcher.py  writer.py
src/tools/: __init__.py  cache.py  search.py
tests/: test_core.py
